--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.27",
     "d3": "^5.9.7",
     "vue": "^2.5.2"
   },
