--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.27",
+    "crossfilter": "^1.3.12",
     "d3": "^5.9.7",
     "vue": "^2.5.2"
   },
