--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "apexcharts": "^3.8.4",
     "bootstrap-vue": "^2.0.0-rc.27",
     "d3": "^5.9.7",
-    "vue": "^2.5.2"
+    "express": "^4.17.1",
+    "jade": "^1.11.0",
+    "node-sass": "^4.12.0",
+    "pug": "^2.0.4",
+    "sass-loader": "^7.2.0",
+    "tween.js": "^16.6.0",
+    "vue": "^2.5.2",
+    "vue-radar": "^0.1.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
