--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pug": "^2.0.4",
     "sass-loader": "^7.2.0",
     "tween.js": "^16.6.0",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-radar": "^0.1.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
