--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "apexcharts": "^3.8.4",
     "bootstrap-vue": "^2.0.0-rc.27",
+    "crossfilter2": "^1.4.7",
     "d3": "^5.9.7",
     "express": "^4.17.1",
     "jade": "^1.11.0",
     "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
     "pug": "^2.0.4",
     "sass-loader": "^7.2.0",
     "tween.js": "^16.6.0",
