--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sass-loader": "^7.2.0",
     "tween.js": "^16.6.0",
     "vue": "^2.5.2",
-    "vue-radar": "^0.1.5"
+    "vue-radar": "^0.1.5",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
